# icarus-utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: docs.yml  linux.yml  windows.yml
docs/: Doxyfile
docs/examples/: examples.md  str_processing.md
include/icarus/: utils.h
include/icarus/utils/: data_node.h  logging_module.h  str_processing.h  system_ops.h
src/: CMakeLists.txt  data_node.cpp  logging_module.cpp  str_processing.cpp  system_ops.cpp
tests/: CMakeLists.txt  test_paths.h.in
tests/src/: data_node_tests.cpp  data_node_tests.h  log_module_tests.cpp  main.cpp  project_fixtures.h  str_proc_tests.cpp  sys_ops_tests.cpp
tests/test_data/: abs_value.yaml  simple_calc_fm.yaml
